--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,34 @@
-<header>
-    <div class="left">
-        <div class="logo"></div>
-        <span class="title visible-large-screen">pyLoad</span>
+<div class="navbar navbar-inverse navbar-fixed-top header">
+    <div class="navbar-inner">
+        <div class="container-fluid">
+            <div class="brand">
+                <div class="logo"></div>
+                <a class="title" href="/">pyLoad</a>
+            </div>
+            <div class="nav-collapse collapse">
+                <ul class="nav">
+                    <li class="active"><a href="/news">News</a></li>
+                    <li><a href="/wiki">Wiki</a></li>
+                    <li><a href="/downloads">Downloads</a></li>
+                    <li><a href="/development">Development</a></li>
+                    <li><a href="#">Forum</a></li>
+                </ul>
+                <ul class="nav pull-right">
+                    <li class="dropdown">
+                        <a data-toggle="dropdown" class="dropdown-toggle" href="#">Dropdown <b class="caret"></b></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#">Action</a></li>
+                            <li><a href="#">Another action</a></li>
+                            <li><a href="#">Something else here</a></li>
+                            <li class="divider"></li>
+                            <li><a href="#">Separated link</a></li>
+                        </ul>
+                    </li>
+                </ul>
+                <form class="navbar-search pull-right">
+                    <input type="text" class="search-query" placeholder="Search">
+                </form>
+            </div>
+        </div>
     </div>
-    <div class="right">
-    </div>
-</header>
+</div>
