--- a/_layouts/frontpage.html
+++ b/_layouts/frontpage.html
@@ -1,4 +1,47 @@
 ---
 layout: default
 ---
-{{ content }}
+
+<div class="row-fluid">
+    <div class="hero-unit spa12">
+        <h1>Marketing stuff!</h1>
+
+        <p class="lead">{{ content }}</p>
+        <a href="#" class="btn btn-large btn-success">Get started today</a>
+    </div>
+</div>
+
+<hr>
+
+<div class="row-fluid" id="content">
+    <div class="span4">
+        <h2>Heading</h2>
+
+        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris
+            condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod.
+            Donec sed odio dui. </p>
+
+        <p><a href="#" class="btn">View details »</a></p>
+    </div>
+    <div class="span4">
+        <h2>Heading</h2>
+
+        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris
+            condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod.
+            Donec sed odio dui. </p>
+
+        <p><a href="#" class="btn">View details »</a></p>
+    </div>
+    <div class="span4">
+        <h2>Heading</h2>
+
+        <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta
+            felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum
+            massa.</p>
+
+        <p><a href="#" class="btn">View details »</a></p>
+    </div>
+</div>
+
+<hr>
+
