different footer bg

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,6 +9,7 @@
             </div>
             <div class="span2">
                 <h2 class="block-title">Powered by</h2>
+                <hr>
                 Bootstrap <br>
                 Backbone <br>
                 sdf dsg <br>
@@ -16,13 +17,15 @@
 
             <div class="span2">
                 <h2 class="block-title">pyLoad</h2>
-                <a href="/toggle_mobile">{{ _("Mobile Version") }}</a> <br>
+                <hr>
+                dsfdsf <br>
                 dsfdsf <br>
                 sdf dsg <br>
             </div>
 
             <div class="span2">
                 <h2 class="block-title">Community</h2>
+                <hr>
                 asd <br>
                 dsfdsf <br>
                 sdf dsg <br>
@@ -30,6 +33,7 @@
 
             <div class="span2">
                 <h2 class="block-title">Development</h2>
+                <hr>
                 asd <br>
                 dsfdsf <br>
                 sdf dsg <br>
