--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<div class="navbar navbar-inverse navbar-fixed-top header">
+<header class="navbar navbar-inverse navbar-fixed-top">
     <div class="navbar-inner">
         <div class="container-fluid">
             <div class="brand">
@@ -31,4 +31,4 @@
             </div>
         </div>
     </div>
-</div>
+</header>
