--- a/static/css/default/style.less
+++ b/static/css/default/style.less
@@ -54,7 +54,7 @@ header .logo {
 */
 footer { //  background-color: @greyDark;
   background-color: #1B1B1B;
-  background-image: linear-gradient(to bottom, #222222, #111111);
+  background-image: linear-gradient(bottom, #222222, #111111);
   background-repeat: repeat-x;
   border-color: #252525;
 
