fixed the footer gradient

--- a/static/css/default/style.less
+++ b/static/css/default/style.less
@@ -52,13 +52,9 @@ header .logo {
 /*
     Footer
 */
-footer { //  background-color: @greyDark;
-  background-color: #1B1B1B;
-  background-image: linear-gradient(bottom, #222222, #111111);
-  background-repeat: repeat-x;
-  border-color: #252525;
-
-//  background: url("../../img/default/bgpatterndark.png") repeat;
+footer {
+  // Same gradient as navbar
+  .gradient(top, #222222, #111111);
   color: @grey;
   min-height: @footer-height;
   margin-top: -@footer-height;
