--- a/_layouts/frontpage.html
+++ b/_layouts/frontpage.html
@@ -1,47 +1,14 @@
 ---
 layout: default
 ---
-
 <div class="row-fluid">
-    <div class="hero-unit spa12">
-        <h1>Marketing stuff!</h1>
-
-        <p class="lead">{{ content }}</p>
+  <div class="span10 offset1">
+    <div class="hero-unit">
+        <h1>pyLoad <small>Download Manager</small></h1>
+        <p>Fast, lightweight and full featured download manager</p>
         <a href="#" class="btn btn-large btn-success">Get started today</a>
     </div>
+    
+    {{ content }}
+  </div>
 </div>
-
-<hr>
-
-<div class="row-fluid" id="content">
-    <div class="span4">
-        <h2>Heading</h2>
-
-        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris
-            condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod.
-            Donec sed odio dui. </p>
-
-        <p><a href="#" class="btn">View details »</a></p>
-    </div>
-    <div class="span4">
-        <h2>Heading</h2>
-
-        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris
-            condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod.
-            Donec sed odio dui. </p>
-
-        <p><a href="#" class="btn">View details »</a></p>
-    </div>
-    <div class="span4">
-        <h2>Heading</h2>
-
-        <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta
-            felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum
-            massa.</p>
-
-        <p><a href="#" class="btn">View details »</a></p>
-    </div>
-</div>
-
-<hr>
-
