--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,10 +9,15 @@
     <link href="/static/css/bootstrap.css" rel="stylesheet" type="text/css"/>
     <link href="/static/css/font.css" rel="stylesheet" type="text/css"/>
     <link href="/static/css/fontawesome.css" rel="stylesheet" type="text/css"/>
+    <link href="/static/css/animate.min.css" rel="stylesheet" type="text/css"/>
     <link href="/static/css/default/style.less" rel="stylesheet/less" type="text/css" media="screen"/>
 
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <!--TODO only needed on frontpage -->
+    <script src="/static/js/bootstrap-2.3.js"></script>
     <script src="/static/js/less-1.3.0.min.js" type="text/javascript"></script>
-    <script src="/static/js/holder.js"></script> <!-- Remove when finished! -->
+    <!-- TODO Remove when finished! -->
+    <script src="/static/js/holder.js"></script>
     {% if page.title != null %}
     <title>{{ page.title }} - pyLoad</title>
     {% else %}
