updated bootstrap, make content little smaller

--- a/static/css/default/style.less
+++ b/static/css/default/style.less
@@ -58,7 +58,7 @@ footer { // Same gradient as navbar
   .gradient(top, #222222, #111111);
   color: @grey;
   min-height: @footer-height;
-  margin-top: -@footer-height;
+//  margin-top: -@footer-height;
   position: relative;
   width: 100%;
   line-height: 16px;
