--- a/_layouts/frontpage.html
+++ b/_layouts/frontpage.html
@@ -1,9 +1,9 @@
 ---
 layout: default
 ---
-<!--<div class="row-fluid animated fadeInDown">-->
-    <!--<div class="span12">-->
-        <div class="container animated fadeInDown">
+<div class="row-fluid animated fadeInDown">
+    <div class="span10 offset1">
+        <!--<div class="container animated fadeInDown">-->
             <div id="myCarousel" class="carousel slide">
                 <ol class="carousel-indicators">
                     <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
@@ -13,11 +13,11 @@ layout: default
                 <!-- Carousel items -->
                 <div class="carousel-inner">
                     <div class="active item">
-                        <div class="row">
+                        <div class="row-fluid">
                             <div class="span6">
                                 <img data-src="holder.js/500x400" alt="">
                             </div>
-                            <div class="span4">
+                            <div class="span6">
                                 <h1>pyLoad
                                     <small>Download Manager</small>
                                 </h1>
@@ -28,11 +28,11 @@ layout: default
                         </div>
                     </div>
                     <div class="item">
-                        <div class="row">
+                        <div class="row-fluid">
                             <div class="span6 animated fadeInDownBig">
                                 <img data-src="holder.js/500x400" alt="">
                             </div>
-                            <div class="span4 animated fadeInUpBig">
+                            <div class="span6 animated fadeInUpBig">
                                 <h1>pyLoad
                                     <small>Download Manager</small>
                                 </h1>
@@ -49,13 +49,9 @@ layout: default
                 <a class="carousel-control left" href="#myCarousel" data-slide="prev">&lsaquo;</a>
                 <a class="carousel-control right" href="#myCarousel" data-slide="next">&rsaquo;</a>
             </div>
-        </div>
-    <!--</div>-->
-<!--</div>-->
-
-<hr>
+        <!--</div>-->
+    </div>
+</div>
 
 {{ content }}
-
-<hr>
 
