--- a/static/css/default/style.less
+++ b/static/css/default/style.less
@@ -57,8 +57,7 @@ header .logo {
 footer { // Same gradient as navbar
   .gradient(top, #222222, #111111);
   color: @grey;
-  min-height: @footer-height;
-//  margin-top: -@footer-height;
+  min-height: @footer-height; //  margin-top: -@footer-height;
   position: relative;
   width: 100%;
   line-height: 16px;
@@ -122,15 +121,18 @@ footer h2 {
 }
 
 /*
-  Other
-*/
-
-hr { //  border-color: @grey;
-}
-
-/*
  Carousel
  */
+
+.carousel-indicators {
+  position: absolute;
+  right: 0;
+  top: 0;
+
+  li {
+    background-color: @greyDark;
+  }
+}
 
 .carousel-control {
   background: none repeat scroll 0 0 #222222;
@@ -140,10 +142,7 @@ hr { //  border-color: @grey;
   font-size: 35px;
   font-weight: bold;
   height: 30px;
-  left: 15px;
   line-height: 23px;
-  margin-top: -20px;
-  opacity: 1;
   position: absolute;
   text-align: center;
   top: 50%;
@@ -155,6 +154,11 @@ hr { //  border-color: @grey;
 
   .item {
     padding: 0 70px;
+
+    .pull-left {
+      padding-right: 20px;
+    }
+
   }
 }
 
