--- a/_layouts/frontpage.html
+++ b/_layouts/frontpage.html
@@ -20,7 +20,7 @@ layout: default
                         </h1>
                         <p>Fast, lightweight and full featured download manager</p>
                         <br>
-                        <a href="#" class="btn btn-large btn-success animated tada">Get started today</a>
+                        <a href="#" class="btn btn-large btn-success">Get started today</a>
                     </div>
                 </div>
                 <div class="item">
