--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,27 +7,12 @@
             </div>
             <div class="nav-collapse collapse">
                 <ul class="nav">
-                    <li class="active"><a href="/news">News</a></li>
-                    <li><a href="/wiki">Wiki</a></li>
-                    <li><a href="/downloads">Downloads</a></li>
-                    <li><a href="/development">Development</a></li>
-                    <li><a href="#">Forum</a></li>
+                    <li {% if page.title == "Downloads" %} class="active" {% endif %}><a href="/downloads">Download</a></li>
+                    <li {% if page.title == "News" %} class="active" {% endif %}><a href="/news">News</a></li>
+                    <li {% if page.title == "Docs" %} class="active" {% endif %}><a href="/docs">Docs</a></li>
+                    <li {% if page.title == "Development" %} class="active" {% endif %}><a href="/development">Development</a></li>
+                    <li {% if page.title == "Forum" %} class="active" {% endif %}><a href="/forum">Forum</a></li>
                 </ul>
-                <ul class="nav pull-right">
-                    <li class="dropdown">
-                        <a data-toggle="dropdown" class="dropdown-toggle" href="#">Dropdown <b class="caret"></b></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="#">Action</a></li>
-                            <li><a href="#">Another action</a></li>
-                            <li><a href="#">Something else here</a></li>
-                            <li class="divider"></li>
-                            <li><a href="#">Separated link</a></li>
-                        </ul>
-                    </li>
-                </ul>
-                <form class="navbar-search pull-right">
-                    <input type="text" class="search-query" placeholder="Search">
-                </form>
             </div>
         </div>
     </div>
