--- a/static/css/default/style.less
+++ b/static/css/default/style.less
@@ -147,7 +147,6 @@ footer h2 {
 }
 
 .carousel-inner {
-  height: 250px;
 
   .item {
     padding: 0 70px;
@@ -207,4 +206,9 @@ footer h2 {
   -moz-animation-fill-mode: both;
   -o-animation-fill-mode: both;
   animation-fill-mode: both;
+}
+
+.features h3 {
+  line-height: 20px;
+
 }
