--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer>
-    <div class="container-fluid">
+    <div class="footer">
         <div class="row-fluid">
-            <div class="span2 offset1">
+            <div class="span2 offset2">
                 <div class="copyright">
                     © 2008-2013<br>
                     <a href="http://pyload.org/" target="_blank">The pyLoad Team</a><br>
@@ -10,35 +10,25 @@
             <div class="span2">
                 <h2 class="block-title">Powered by</h2>
                 <hr>
-                Bootstrap <br>
+                Bootstrap<br>
                 Backbone <br>
-                sdf dsg <br>
+                Python<br>
             </div>
-
-            <div class="span2">
-                <h2 class="block-title">pyLoad</h2>
-                <hr>
-                dsfdsf <br>
-                dsfdsf <br>
-                sdf dsg <br>
-            </div>
-
             <div class="span2">
                 <h2 class="block-title">Community</h2>
                 <hr>
-                asd <br>
-                dsfdsf <br>
-                sdf dsg <br>
+                Docs<br>
+                Forum<br>
+                Webchat Chat<br>
             </div>
 
             <div class="span2">
                 <h2 class="block-title">Development</h2>
                 <hr>
-                asd <br>
-                dsfdsf <br>
-                sdf dsg <br>
+                GitHub <br>
+                Join Devs<br>
+                Dev Chat<br>
             </div>
         </div>
     </div>
 </footer>
-
