--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer>
-    <div class="footer">
+    <div class="container-fluid">
         <div class="row-fluid">
             <div class="span2 offset2">
                 <div class="copyright">
