--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,18 +6,32 @@
     <meta name="description" content="pyLoad Download Manager">
     <meta name="viewport" content="width=device-width">
 
-    <link href="/static/css/bootstrap.css" rel="stylesheet" type="text/css"/>
-    <link href="/static/css/font.css" rel="stylesheet" type="text/css"/>
-    <link href="/static/css/fontawesome.css" rel="stylesheet" type="text/css"/>
-    <link href="/static/css/animate.css" rel="stylesheet" type="text/css"/>
-    <link href="/static/css/default/style.css" rel="stylesheet" type="text/css" media="screen"/>
+    {% stylesheet css/bootstrap %}
+    {% stylesheet css/font %}
+    {% stylesheet css/fontawesome %}
+    {% stylesheet css/animate %}
+    {% stylesheet css/default/style %}
+
+
+    <!--<link href="/static/css/bootstrap.css" rel="stylesheet" type="text/css"/>-->
+    <!--<link href="/static/css/font.css" rel="stylesheet" type="text/css"/>-->
+    <!--<link href="/static/css/fontawesome.css" rel="stylesheet" type="text/css"/>-->
+    <!--<link href="/static/css/animate.css" rel="stylesheet" type="text/css"/>-->
+    <!--<link href="/static/css/default/style.css" rel="stylesheet" type="text/css" media="screen"/>-->
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+
+    {% javascript js/bootstrap-2.3.1 %}
+    {% javascript js/holder %}
     <!--TODO only needed on frontpage -->
-    <script src="/static/js/bootstrap-2.3.1.js"></script>
+    <!--<script src="/static/js/bootstrap-2.3.1.js"></script>-->
 
     <!-- TODO Remove when finished! -->
-    <script src="/static/js/holder.js"></script>
+    <!--<script src="/static/js/holder.js"></script>-->
+
+    {% if page.css %}{{ page.css | stylesheet }}{% endif %}
+    {% if page.js %}{{ page.js | javascript }}{% endif %}
+
     {% if page.title != null %}
     <title>{{ page.title }} - pyLoad</title>
     {% else %}
