--- a/app/_includes/header.html
+++ b/app/_includes/header.html
@@ -11,7 +11,7 @@
                     <li {% if page.section == "news" %} class="active" {% endif %}><a href="/news">News</a></li>
                     <li {% if page.section == "wiki" %} class="active" {% endif %}><a href="/wiki">Wiki</a></li>
                     <li {% if page.section == "development" %} class="active" {% endif %}><a href="/development">Development</a></li>
-                    <li {% if page.section == "forum" %} class="active" {% endif %}><a href="/forum">Forum</a></li>
+                    <li><a href="http://beta.pyload.org">Board</a></li>
                 </ul>
             </div>
         </div>
