--- a/app/_layouts/wiki.html
+++ b/app/_layouts/wiki.html
@@ -2,5 +2,8 @@
 layout: default
 section: wiki
 ---
-{% include title.html %}
-{{ content }}
+<div class="row-fluid">
+    <div class="span10 offset1">
+      {{ content }}
+    </div>
+</div>
