updated to new footer

--- a/app/static/styles/frontpage.less
+++ b/app/static/styles/frontpage.less
@@ -1,8 +1,8 @@
 
 @import "pyload-common/styles/common";
 
-#content-container {
-  margin-top: 20px;
+#content-container:before {
+  height: @header-height + 20px;
 }
 
 /*
