--- a/app/static/styles/main.less
+++ b/app/static/styles/main.less
@@ -9,3 +9,6 @@
 @import "pyload-common/styles/basic-layout";
 
 @import "frontpage";
+
+// This font is little larger than in original webui
+@footer-height: 67px;
