--- a/app/static/styles/main.less
+++ b/app/static/styles/main.less
@@ -9,6 +9,7 @@
 @import "pyload-common/styles/basic-layout";
 
 @import "frontpage";
+@import "news";
 
 // This font is little larger than in original webui
 @footer-height: 67px;
