--- a/app/_layouts/default.html
+++ b/app/_layouts/default.html
@@ -6,6 +6,8 @@
     <meta name="description" content="pyLoad Download Manager">
     <meta name="viewport" content="width=device-width">
 
+    <link rel="alternate" type="application/rss+xml" title="{{ site.name }}" href="{{ site.url }}/atom.xml">
+
     <!-- build:css({app,.tmp}) /static/styles/main.css -->
     <link href="/static/styles/main.css" rel="stylesheet" type="text/css"/>
     <!-- endbuild -->
