--- a/app/_includes/post_header.html
+++ b/app/_includes/post_header.html
@@ -5,7 +5,10 @@
 </h2>
 <hr>
 <i class="icon-time"></i> Posted on {{ include.post.date | date: "%B %-d, %Y" }}
-in&nbsp;{% for tag in include.post.tags %}<a href="/news/category/{{tag}}">{{ tag }}</a>{% unless forloop.last %},&nbsp;{% endunless %}{% endfor %}
+in
+{% for tag in include.post.tags %}
+<a href="/news/category/{{tag}}">{{ tag }}</a>{% unless forloop.last %},{% endunless %}
+{% endfor %}
 <hr>
 
 {% if p.subtitle %}
